website/src/App.scss
html,
body {
  background: rgb(239, 239, 239);
  background: url("./cardboard.png") repeat;
  font-family: "EB Garamond";
  background-size: 600px;
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1em;
  margin-top: 2em;
  margin-left: auto;
  margin-right: auto;
  padding: 0 2em;

  @media screen and (max-width: 800px) {
    padding: 0 1em;
  }
}

.logo {
  width: 64px;
  height: 64px;
  border-radius: 16px;
  cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='32' height='38' viewport='0 0 100 100' style='fill:black;font-size:19px;'><text y='50%'>🎲</text></svg>")
      16 0,
    auto; /*!emojicursor.app*/
}

.description {
  display: flex;
  flex-direction: column;
  gap: 0.25em;
  font-size: 1.5em;
  max-width: 800px;
  backdrop-filter: blur(2px);
}

.cta {
  font-size: 1.5em;
  background: #fed15d;
  padding: 2em 2em;
  width: 100%;
  max-width: 800px;
  border-radius: 16px;
  box-shadow: 0px 0px 8px 4px #fed15d;

  @media screen and (max-width: 800px) {
    padding: 1em 1em;
  }
}

.cover {
  position: absolute;
  z-index: -1;
  min-width: 1500px;
  margin-top: -4%;
}

.stickies {
  display: flex;
  gap: 3em;
}

.carousel {
  display: flex;
  overflow-x: auto;
  gap: 1em;
  margin: 2em 0;
  background-size: contain;
  padding: 4em;
  margin-bottom: 0;
  padding-bottom: 0;
  justify-content: center;
  background-repeat: no-repeat;

  img:not(.sticky) {
    max-height: 500px;
    border-radius: 8px;
    box-shadow: 0px 0px 16px 6px rgba(41, 41, 41, 0.3);
  }
  @media screen and (max-width: 1280px) {
    padding: 4em;
    padding-left: 1em;
    padding-right: 1em;
    // margin-left: -1em;
    width: calc(100% + 5em);
    justify-content: start;
  }
}

.sticky {
  max-width: 180px;
  filter: drop-shadow(0px 0px 6px rgba(41, 41, 41, 0.3));
}

footer {
  margin-top: 5em;
  padding-bottom: 3em;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  text-align: center;
  font-size: 1.3em;
  display: flex;
  flex-direction: column;
  align-items: center;

  a {
    text-decoration: none;
    color: #1b4ad8;
  }
}

.medium-zoom--opened {
  .medium-zoom-overlay {
    opacity: 0.8 !important;
  }
}
.medium-zoom-image--opened {
  object-fit: contain;
  opacity: 1;
}

footer {
  color: rgb(51, 51, 51);
}

.logos {
  display: flex;
  margin-top: 0.25em;
  gap: 0.5em;
  div {
    display: flex;
    flex-direction: column;
  }
  img {
    width: 32px;
    height: 32px;
  }
}

